--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,22 @@
-$icon-font-path: "/bower_components/sass-bootstrap/fonts/";
-
-@import 'sass-bootstrap/lib/bootstrap';
-
+// TODO: browsehappy
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
+}
+
+// $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
+// @import 'sass-bootstrap/lib/bootstrap';
+
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic);
+
+@import "tools/variables";
+
+@import "objects/hexagon";
+@import "objects/knockout";
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: $text-color;
 }
