Hexagons with borders. Not so pretty.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,10 @@
 @import "objects/hexagon";
 @import "objects/knockout";
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   color: $text-color;
