--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic,700italic);
 
 @import "tools/variables";
+@import "compass/css3/images";
 
 @import "objects/hexagon";
 @import "objects/knockout";
