--- a/app/styles/objects/_hexagon.scss
+++ b/app/styles/objects/_hexagon.scss
@@ -5,7 +5,7 @@ $hexagon-size: 150px;
   margin-top: $hexagon-size;
   width: $hexagon-size;
   height: $hexagon-size / sqrt(3); // TODO: check if hexagon height is correct
-  @include background(linear-gradient(left, $group-a 50%, $group-b 50%));
+  @include background-image(linear-gradient(left, $group-a 50%, $group-b 50%));
   // background-image: ; // $group-b;
 
   &:before, &:after {
@@ -20,11 +20,14 @@ $hexagon-size: 150px;
   }
 
   &:before {
+    // display: none;
     -webkit-transform: rotateZ(-60deg);
+    @include background-image(linear-gradient(150deg, $group-a 50%, $group-b 50%));
   }
 
   &:after {
     -webkit-transform: rotateZ(60deg);
+    @include background-image(linear-gradient(30deg, $group-a 50%, $group-b 50%));
   }
 }
 
