--- a/app/styles/tools/_variables.scss
+++ b/app/styles/tools/_variables.scss
@@ -8,3 +8,8 @@ $group-e: #66caa7;
 $group-f: #3ebc99;
 $group-g: #55abe4;
 $group-h: #4793c8;
+
+$quarter-final: #a5b4b4;
+
+$hexagon-size: 152px;
+$hexagon-border: 6px;
