Group game data for group A

--- a/app/scripts/templates/group.hbs
+++ b/app/scripts/templates/group.hbs
@@ -1,6 +1,6 @@
 <h2 class="group__name">{{name}}</h2>
 <h3 class="group__teams">{{teams}}</h3>
-<!--table class="group__table">
+<table class="group__table">
 	<tbody>
 		<tr class="match">
 			<td class="match__date">12.06.</td>
@@ -51,4 +51,4 @@
 			<td class="match__result"></td>
 		</tr>
 	</tbody>
-</table -->
+</table>
