Group views with inputs

--- a/app/scripts/templates/group-match.hbs
+++ b/app/scripts/templates/group-match.hbs
@@ -3,4 +3,8 @@
 <td class="match__stadium">{{stadium}}</td>
 <td class="match__city">{{city}}</td>
 <td class="match__teams">{{home}} &ndash; {{guest}}</td>
-<td class="match__result"></td>
+<td class="match__results group__border">
+	<input class="goals goals--home" type="text" />
+	<span class="group__text">|</span>
+	<input class="goals goals--guest" type="text" />
+</td>
