--- a/app/scripts/templates/group.hbs
+++ b/app/scripts/templates/group.hbs
@@ -1,3 +1,13 @@
-<h2 class="group__name">{{name}}</h2>
-<h3 class="group__teams">{{teams}}</h3>
-<table class="group__table"></table>
+<div class="group__border group__border--main">
+	<h2 class="group__name">{{name}}</h2>
+	<h3 class="group__teams">{{teams}}</h3>
+	<table class="group__table"></table>
+</div>
+<div class="group__rank">
+	<label class="group__background" for="{{idFirst}}" class="group__id">{{idFirst}}</label>
+	<input class="group__border" type="text" id="{{idFirst}}" value="">
+</div>
+<div class="group__rank">
+	<label class="group__background" for="{{idSecond}}" class="group__id">{{idSecond}}</label>
+	<input class="group__border" type="text" id="{{idSecond}}" value="">
+</div>
