--- a/app/styles/objects/_groups.scss
+++ b/app/styles/objects/_groups.scss
@@ -1,8 +1,5 @@
 .group {
 	@include flex(0, 1, 400px);
-	border-left-width: 3px;
-	border-left-style: solid;
-	padding-left: $base-spacing-unit;
 	margin: $half-spacing-unit;
 }
 
@@ -10,58 +7,131 @@
 	font-weight: normal;
 }
 
+.group__rank {
+	input {
+		line-height: 20px;
+	}
+	label {
+		padding: 5px 15px;
+		display: inline-block;
+		text-align: center;
+	}
+}
+
+.group__border {
+	border-width: 1px;
+	border-style: solid;
+	outline: none;
+}
+
+.group__border--main {
+	border-width: 0;
+	border-left-width: 3px;
+	border-left-style: solid;
+	margin-bottom: $base-spacing-unit;
+}
+
+.group__rank, .group__border--main {
+	padding-left: $half-spacing-unit;
+}
+
+
+.group__background {
+	color: white;
+}
+
 .group--a {
-	border-left-color: $group-a;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-a;
+	}
+	.group__name, .group__text {
 		color: $group-a;
+	}
+	.group__background {
+		background-color: $group-a;
 	}
 }
 
 .group--b {
-	border-left-color: $group-b;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-b;
+	}
+	.group__name, .group__text {
 		color: $group-b;
+	}
+	.group__background {
+		background-color: $group-b;
 	}
 }
 
 .group--c {
-	border-left-color: $group-c;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-c;
+	}
+	.group__name, .group__text {
 		color: $group-c;
+	}
+	.group__background {
+		background-color: $group-c;
 	}
 }
 
 .group--d {
-	border-left-color: $group-d;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-d;
+	}
+	.group__name, .group__text {
 		color: $group-d;
+	}
+	.group__background {
+		background-color: $group-d;
 	}
 }
 
 .group--e {
-	border-left-color: $group-e;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-e;
+	}
+	.group__name, .group__text {
 		color: $group-e;
+	}
+	.group__background {
+		background-color: $group-e;
 	}
 }
 
 .group--f {
-	border-left-color: $group-f;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-f;
+	}
+	.group__name, .group__text {
 		color: $group-f;
+	}
+	.group__background {
+		background-color: $group-f;
 	}
 }
 
 .group--g {
-	border-left-color: $group-g;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-g;
+	}
+	.group__name, .group__text {
 		color: $group-g;
+	}
+	.group__background {
+		background-color: $group-g;
 	}
 }
 
 .group--h {
-	border-left-color: $group-h;
-	.group__name {
+	&, & .group__border {
+		border-color: $group-h;
+	}
+	.group__name, .group__text {
 		color: $group-h;
+	}
+	.group__background {
+		background-color: $group-h;
 	}
 }
