matchEvents object to dispatch events for finished groups/matches

--- a/app/scripts/templates/group-match.hbs
+++ b/app/scripts/templates/group-match.hbs
@@ -4,7 +4,7 @@
 <td class="match__city">{{city}}</td>
 <td class="match__teams">{{home}} &ndash; {{guest}}</td>
 <td class="match__results group__border">
-	<input class="goals goals--home" type="text" />
+	<input class="goals goals--home" type="text" value="{{homeGoals}}" />
 	<span class="group__text">|</span>
-	<input class="goals goals--guest" type="text" />
+	<input class="goals goals--guest" type="text" value="{{guestGoals}}" />
 </td>
