--- a/app/scripts/templates/group.hbs
+++ b/app/scripts/templates/group.hbs
@@ -5,9 +5,9 @@
 </div>
 <div class="group__rank">
 	<label class="group__background" for="{{idFirst}}" class="group__id">{{idFirst}}</label>
-	<input class="group__border" type="text" id="{{idFirst}}" value="">
+	<input class="group__border" type="text" id="{{idFirst}}" value="" disabled>
 </div>
 <div class="group__rank">
 	<label class="group__background" for="{{idSecond}}" class="group__id">{{idSecond}}</label>
-	<input class="group__border" type="text" id="{{idSecond}}" value="">
+	<input class="group__border" type="text" id="{{idSecond}}" value="" disabled>
 </div>
