Continued on KnockoutMatches

--- a/app/scripts/templates/knockout-match.hbs
+++ b/app/scripts/templates/knockout-match.hbs
@@ -3,5 +3,6 @@
 	<span class="match__teams--home">{{home}}:</span><span class="match__teams--guest">{{guest}}</span>
 </div>
 <div class="match__team-fields">
-	
+	<input type="text" class="group__border group__border--home group__border--bottom" disabled id="{{idHome}}" value="">
+	<input type="text" class="group__border group__border--home group__border--bottom" disabled id="{{idGuest}}" value="">
 </div>
