Group stage done

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,8 @@
 @import "sass-flex-mixin/flex";
 @import "tools/mixins";
 
+@import "generic/clearfix";
+
 @import "objects/flex";
 @import "objects/header";
 @import "objects/hexagons";
