--- a/app/styles/objects/_hexagons.scss
+++ b/app/styles/objects/_hexagons.scss
@@ -33,38 +33,58 @@
 
 // color definitions
 
+@mixin border-colors($group-a, $group-b) {
+	.group__border--home {
+		border-color: $group-a;
+	}
+	.group__border--guest {
+		border-color: $group-b;
+	}
+}
+
+
+
 .hexagon--a-b {
 	@include hexagon($hexagon-size, $group-a, $group-b);
+	@include border-colors($group-a, $group-b);
 }
 
 .hexagon--b-a {
 	@include hexagon($hexagon-size, $group-b, $group-a);
+	@include border-colors($group-b, $group-a);
 }
 
 .hexagon--c-d {
 	@include hexagon($hexagon-size, $group-c, $group-d);
+	@include border-colors($group-c, $group-d);
 }
 
 .hexagon--d-c {
 	@include hexagon($hexagon-size, $group-d, $group-c);
+	@include border-colors($group-d, $group-c);
 }
 
 .hexagon--e-f {
 	@include hexagon($hexagon-size, $group-e, $group-f);
+	@include border-colors($group-e, $group-f);
 }
 
 .hexagon--f-e {
 	@include hexagon($hexagon-size, $group-f, $group-e);
+	@include border-colors($group-f, $group-e);
 }
 
 .hexagon--g-h {
 	@include hexagon($hexagon-size, $group-g, $group-h);
+	@include border-colors($group-g, $group-h);
 }
 
 .hexagon--h-g {
 	@include hexagon($hexagon-size, $group-h, $group-g);
+	@include border-colors($group-h, $group-g);
 }
 
 .hexagon--qf {
 	@include hexagon($hexagon-size, $quarter-final);
+	@include border-colors($quarter-final, $quarter-final);
 }
