--- a/app/styles/objects/_matches.scss
+++ b/app/styles/objects/_matches.scss
@@ -39,6 +39,18 @@
   width: 30px;
 }
 
+.match--knockout {
+  .match__date {
+    float: left;
+  }
+  .match__time {
+    float: right;
+  }
+  .match__city {
+    text-align: center;
+  }
+}
+
 .match__stadium {
   width: 100px;
 }
@@ -59,6 +71,13 @@
   }
 }
 
+.match__team-fields {
+  input {
+    margin: 5px;
+    text-align: center;
+  }
+}
+
 .match__results {
   width: 30px;
   border-width: 1px;
@@ -66,11 +85,23 @@
   border-color: inherit;
 }
 
+.match__results--knockout {
+  width: auto;
+  text-align: center;
+  border: none;
+}
+
 .goals {
   width: 10px;
   border: none;
   outline: none;
   text-align: center;
+}
+
+.match__results--knockout {
+  .goals {
+    width: 20px;
+  }
 }
 
 
