--- a/app/styles/settings/_color.scss
+++ b/app/styles/settings/_color.scss
@@ -1,4 +1,8 @@
-$text-color: #425669;
+/*------------------------------------*\
+    #COLOR
+\*------------------------------------*/
+$base--text-color:      #425669;
+$base--link-color:      #BADA55;
 
 $group-a: #ebbe1b;
 $group-b: #f4901c;
@@ -10,10 +14,3 @@ $group-g: #55abe4;
 $group-h: #4793c8;
 
 $quarter-final: #a5b4b4;
-
-$hexagon-size: 152px;
-$hexagon-border: 6px;
-
-$base-spacing-unit: 20px;
-
-$half-spacing-unit: $base-spacing-unit / 2;
