--- a/app/styles/tools/_mixins.scss
+++ b/app/styles/tools/_mixins.scss
@@ -1,3 +1,41 @@
+/*------------------------------------*\
+		#MIXINS
+\*------------------------------------*/
+/**
+* Some nice mixins we can use to make our lives easier. Feel free to add as
+* many as you like!
+*/
+
+
+
+
+
+/**
+* Create a fully formed type style (sizing and vertical rhythm) by passing in a
+* single value, e.g.:
+*
+	`@include font-size(10px);`
+*
+*/
+@mixin font-size($font-size, $line-height: true) {
+		font-size: $font-size;
+		font-size: ($font-size / $base--font-size) * 1rem;
+
+		@if $line-height == true {
+				line-height: ceil($font-size / $base--line-height) * ($base--line-height / $font-size);
+		}
+}
+
+
+
+
+
+/**
+* Create nice hexagons!
+*
+	`@include hexagon($hexagon-size, $group-a, $group-b);`
+*
+*/
 @mixin hexagon($width, $color-left, $color-right: false) {
 	position: relative;
 	width: $width;
