--- a/app/styles/objects/_matches.scss
+++ b/app/styles/objects/_matches.scss
@@ -7,6 +7,12 @@
 .knockout__ui-group {
   margin-top: $hexagon-size / 3 - $hexagon-border * 2;
   @include flexbox;
+
+  position: relative;
+  z-index: 0;
+  & .hexagon {
+    z-index: 1;
+  }
 }
 
 .knockout__ui-group--one {
@@ -62,6 +68,7 @@
 .match--group .match__teams {
   width: 130px;
   text-align: right;
+  padding-right: $half-spacing-unit;
 }
 
 .match--knockout {
