--- a/app/styles/objects/_matches.scss
+++ b/app/styles/objects/_matches.scss
@@ -1,6 +1,17 @@
 
 .knockout-matches {
   @include flexbox;
+  // @include flex-wrap(wrap);
+}
+
+.knockout-matches--bo16-qf {
+  @include flexbox;
+  @include flex-direction(column);
+}
+
+.knockout-matches--sf-final {
+  margin-left: 200px;
+  @include flexbox;
   @include flex-direction(column);
 }
 
@@ -35,6 +46,10 @@
   margin-top: 100px;
   @include flexbox;
   @include flex-wrap(wrap);
+}
+
+.match__id {
+  text-transform: uppercase;
 }
 
 .match__date {
