--- a/app/styles/settings/_color.scss
+++ b/app/styles/settings/_color.scss
@@ -4,15 +4,16 @@
 $base--text-color:      #425669;
 $base--link-color:      #BADA55;
 
-$group-a: #ebbe1b;
-$group-b: #f4901c;
-$group-c: #f25149;
-$group-d: #d0433c;
-$group-e: #66caa7;
-$group-f: #3ebc99;
-$group-g: #55abe4;
-$group-h: #4793c8;
+$group-a:               #ebbe1b;
+$group-b:               #f4901c;
+$group-c:               #f25149;
+$group-d:               #d0433c;
+$group-e:               #66caa7;
+$group-f:               #3ebc99;
+$group-g:               #55abe4;
+$group-h:               #4793c8;
 
-$quarter-final: #a5b4b4;
-$semi-final:    #fff;
-$final:         #f3cd14;
+$quarter-final:         #a5b4b4;
+$semi-final:            #919e9e;
+$consolation-match:     #ee912c;
+$final-match:           #f3cd14;
