Show error when knockout match is a draw

--- a/app/styles/objects/_matches.scss
+++ b/app/styles/objects/_matches.scss
@@ -118,6 +118,10 @@
   width: auto;
   text-align: center;
   border: none;
+
+  &.match__results--knockout__draw input {
+    background-color: rgba(255,0,0,0.8);
+  }
 }
 
 .goals {
