--- a/app/styles/settings/_color.scss
+++ b/app/styles/settings/_color.scss
@@ -2,7 +2,7 @@
     #COLOR
 \*------------------------------------*/
 $base--text-color:      #425669;
-$base--link-color:      #BADA55;
+$base--link-color:      $base--text-color;
 
 $group-a:               #ebbe1b;
 $group-b:               #f4901c;
