--- a/app/styles/trumps/_helpers.scss
+++ b/app/styles/trumps/_helpers.scss
@@ -14,6 +14,8 @@
 .float--right   { float: right!important; }
 .float--left    { float: left !important; }
 
+.text--right    { text-align: right; }
+
 
 /**
  * Round corners.
