A little layout and meta info

--- a/app/styles/base/_page.scss
+++ b/app/styles/base/_page.scss
@@ -23,3 +23,7 @@ html {
         background-image: url(http://basehold.it/i/#{$baseline-size});
     }
 }
+
+body {
+  margin: $base--spacing-unit;
+}
