--- a/app/styles/trumps/_helpers.scss
+++ b/app/styles/trumps/_helpers.scss
@@ -14,7 +14,12 @@
 .float--right   { float: right!important; }
 .float--left    { float: left !important; }
 
+
+.text--left     { text-align: left; }
+.text--center   { text-align: center; }
 .text--right    { text-align: right; }
+
+.vertical--middle  { vertical-align: middle; }
 
 
 /**
