Changed input type to number and hid resulting up/down arrows in webkit, moz (i.e. doesn't show them by default)

--- a/app/scripts/templates/knockout-match.hbs
+++ b/app/scripts/templates/knockout-match.hbs
@@ -7,9 +7,9 @@
 	<input type="text" class="group__border group__border--guest group__border--bottom" disabled id="{{idGuest}}" value="{{guestName}}">
 </div>
 <div class="match__results match__results--knockout{{isDraw}}">
-	<input class="goals goals--home group__border group__border--home group__border--bottom" type="text" value="{{homeGoals}}" tabindex="{{tabIndex}}" />
+	<input class="goals goals--home group__border group__border--home group__border--bottom" type="number" value="{{homeGoals}}" tabindex="{{tabIndex}}" />
 	<span class="group__text"> : </span>
-	<input class="goals goals--guest group__border group__border--guest group__border--bottom" type="text" value="{{guestGoals}}" tabindex="{{tabIndex}}" />
+	<input class="goals goals--guest group__border group__border--guest group__border--bottom" type="number" value="{{guestGoals}}" tabindex="{{tabIndex}}" />
 </div>
 <div class="cf">
 	<div class="match__date">{{date}}</div>
