--- a/app/styles/base/_inputs.scss
+++ b/app/styles/base/_inputs.scss
@@ -1,3 +1,13 @@
 input, input[disabled] {
 	background-color: transparent;
 }
+
+input[type='number'] {
+		-moz-appearance:textfield;
+}
+
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+}
