Prevented line break in between teams in group view

--- a/app/scripts/templates/group-match.hbs
+++ b/app/scripts/templates/group-match.hbs
@@ -2,7 +2,7 @@
 <td class="match__time">{{time}}</td>
 <td class="match__stadium">{{stadium}}</td>
 <td class="match__city">{{city}}</td>
-<td class="match__teams">{{home}} &ndash; {{guest}}</td>
+<td class="match__teams">{{home}}&nbsp;&ndash;&nbsp;{{guest}}</td>
 <td class="match__results group__border">
 	<input class="goals goals--home" type="number" value="{{homeGoals}}" tabindex="{{tabIndex}}" />
 	<span class="group__text">|</span>
