Colors for consolation match, responsive, viewport

--- a/app/styles/objects/_hexagons.scss
+++ b/app/styles/objects/_hexagons.scss
@@ -93,6 +93,7 @@
 
 .hexagon--consolation {
 	@include hexagon($hexagon-size, $consolation-match);
+	@include border-colors($consolation-match, $consolation-match);
 }
 
 .hexagon--double {
