--- a/app/styles/objects/_matches.scss
+++ b/app/styles/objects/_matches.scss
@@ -1,7 +1,7 @@
 
 .knockout-matches {
   @include flexbox;
-  // @include flex-wrap(wrap);
+  @include flex-wrap(wrap);
 }
 
 .knockout-matches--bo16-qf {
@@ -9,10 +9,11 @@
   margin-top: $hexagon-size--final - $hexagon-size--final / sqrt(3);
   @include flexbox;
   @include flex-direction(column);
+
+  margin-right: 200px;
 }
 
 .knockout-matches--sf-final {
-  margin-left: 200px;
   @include flexbox;
   @include flex-direction(column);
   .knockout__ui-group--three {
@@ -223,6 +224,19 @@
     font-size: 16px;
     color: $final-match;
     margin-top: $half-spacing-unit;
+    font-weight: bold;
+  }
+  .match__teams {
+    display: none;
+  }
+}
+
+.hexagon--consolation {
+  .match__id {
+    font-size: 14px;
+    color: $consolation-match;
+    margin-top: $half-spacing-unit;
+    font-weight: bold;
   }
   .match__teams {
     display: none;
