Added hover filter function for cities; Removed stadiumname in groupmatches

--- a/app/scripts/templates/knockout-match.hbs
+++ b/app/scripts/templates/knockout-match.hbs
@@ -15,4 +15,4 @@
 	<div class="match__date">{{date}}</div>
 	<div class="match__time">{{time}}</div>
 </div>
-<span class="match__city">{{city}}</span>
+<span class="match__city stadium-highlightable" data-stadium="{{stadium}}">{{city}}</span>
