--- a/app/styles/objects/_matches.scss
+++ b/app/styles/objects/_matches.scss
@@ -66,6 +66,10 @@
   text-transform: uppercase;
 }
 
+.match__day {
+  width: 15px;
+}
+
 .match__date {
   width: 30px;
 }
@@ -91,7 +95,7 @@
 }
 
 .match__city {
-  width: 60px;
+  width: 70px;
 }
 
 .match--group .match__teams {
