--- a/app/scripts/templates/group-match.hbs
+++ b/app/scripts/templates/group-match.hbs
@@ -1,7 +1,7 @@
+<td class="match__day">{{day}}</td>
 <td class="match__date">{{date}}</td>
 <td class="match__time">{{time}}</td>
-<td class="match__stadium">{{stadium}}</td>
-<td class="match__city">{{city}}</td>
+<td class="match__city stadium-highlightable" data-stadium="{{stadium}}">{{city}}</td>
 <td class="match__teams">{{home}}&nbsp;&ndash;&nbsp;{{guest}}</td>
 <td class="match__results group__border">
 	<input class="goals goals--home" type="number" value="{{homeGoals}}" tabindex="{{tabIndex}}" />
