--- a/app/scripts/templates/stadium.hbs
+++ b/app/scripts/templates/stadium.hbs
@@ -1,5 +1,5 @@
-<tr>
-	<td>{{id}}</td>
-	<td>{{city}}</td>
-	<td>{{name}}</td>
+<tr class="stadium-highlightable" data-stadium="{{name}}">
+	<td class="stadium-table--id">{{id}}</td>
+	<td class="stadium-table--city">{{city}}</td>
+	<td class="stadium-table--name">{{name}}</td>
 </tr>
