Added hover filter function for teams

--- a/app/scripts/templates/group-match.hbs
+++ b/app/scripts/templates/group-match.hbs
@@ -2,7 +2,7 @@
 <td class="match__date">{{date}}</td>
 <td class="match__time">{{time}}</td>
 <td class="match__city stadium-highlightable" data-stadium="{{stadium}}">{{city}}</td>
-<td class="match__teams">{{home}}&nbsp;&ndash;&nbsp;{{guest}}</td>
+<td class="match__teams"><span class="team-highlightable" data-team="{{home}}">{{home}}</span>&nbsp;&ndash;&nbsp;<span class="team-highlightable" data-team="{{guest}}">{{guest}}</span></td>
 <td class="match__results group__border">
 	<input class="goals goals--home" type="number" value="{{homeGoals}}" tabindex="{{tabIndex}}" />
 	<span class="group__text">|</span>
