--- a/app/scripts/templates/group.hbs
+++ b/app/scripts/templates/group.hbs
@@ -1,6 +1,11 @@
 <div class="group__border group__border--main">
 	<h2 class="group__name">{{name}}</h2>
-	<h3 class="group__teams">{{teams}}</h3>
+	<h3 class="group__teams">
+		<span class="team-highlightable" data-team="{{teama}}">{{teama}}</span> |
+		<span class="team-highlightable" data-team="{{teamb}}">{{teamb}}</span> |
+		<span class="team-highlightable" data-team="{{teamc}}">{{teamc}}</span> |
+		<span class="team-highlightable" data-team="{{teamd}}">{{teamd}}</span>
+	</h3>
 	<table class="group__table"></table>
 </div>
 <div class="group__rank">
