--- a/app/scripts/templates/knockout-match.hbs
+++ b/app/scripts/templates/knockout-match.hbs
@@ -3,7 +3,9 @@
 	<span class="match__teams--home">{{home}}:</span><span class="match__teams--guest">{{guest}}</span>
 </div>
 <div class="match__team-fields">
+	<div class="team-highlightable" data-team="{{homeName}}"></div>
 	<input type="text" class="group__border group__border--home group__border--bottom" disabled id="{{idHome}}" value="{{homeName}}">
+	<div class="team-highlightable" data-team="{{guestName}}"></div>
 	<input type="text" class="group__border group__border--guest group__border--bottom" disabled id="{{idGuest}}" value="{{guestName}}">
 </div>
 <div class="match__results match__results--knockout{{isDraw}}">
